Introduce Identifier, QualifiedName and OperatorName entities for handling of quoted identifiers.