@@ -20,17 +20,17 @@ class FunctionExprParserTest {
     void parses_lower_with_case_argument_single_when() {
         var f = parseFunc("LOWER(CASE WHEN u.flag > 0 THEN u.name END)");
 
-        assertEquals("lower", f.name().toLowerCase());
+        assertEquals("lower", String.join(".", f.name().values()).toLowerCase());
         assertEquals(1, f.args().size());
 
-        var a0 = f.args().get(0);
+        var a0 = f.args().getFirst();
         assertInstanceOf(FunctionExpr.Arg.ExprArg.class, a0);
         var expr = ((FunctionExpr.Arg.ExprArg) a0).expr();
         assertInstanceOf(CaseExpr.class, expr);
         var c = (CaseExpr) expr;
 
         assertEquals(1, c.whens().size());
-        WhenThen wt = c.whens().get(0);
+        WhenThen wt = c.whens().getFirst();
         assertNotNull(wt.when());
         assertNotNull(wt.then());
         assertNull(c.elseExpr());
@@ -40,7 +40,7 @@ class FunctionExprParserTest {
     void parses_case_with_else_in_function_arg() {
         var f = parseFunc("UPPER(CASE WHEN a > 1 THEN b ELSE 'x' END)");
 
-        var c = (CaseExpr) ((FunctionExpr.Arg.ExprArg) f.args().get(0)).expr();
+        var c = (CaseExpr) ((FunctionExpr.Arg.ExprArg) f.args().getFirst()).expr();
         assertEquals(1, c.whens().size());
         assertNotNull(c.elseExpr());
     }
@@ -51,9 +51,9 @@ class FunctionExprParserTest {
 
         assertEquals(2, f.args().size());
 
-        var nested = (FunctionExpr) ((FunctionExpr.Arg.ExprArg) f.args().get(0)).expr();
-        assertEquals("lower", nested.name().toLowerCase());
-        var nestedArg = ((FunctionExpr.Arg.ExprArg) nested.args().get(0)).expr();
+        var nested = (FunctionExpr) ((FunctionExpr.Arg.ExprArg) f.args().getFirst()).expr();
+        assertEquals("lower", String.join(".", nested.name().values()).toLowerCase());
+        var nestedArg = ((FunctionExpr.Arg.ExprArg) nested.args().getFirst()).expr();
         assertInstanceOf(ColumnExpr.class, nestedArg);
 
         var lit = ((FunctionExpr.Arg.ExprArg) f.args().get(1)).expr();
@@ -64,10 +64,10 @@ class FunctionExprParserTest {
     void parses_coalesce_with_scalar_subquery_argument() {
         var f = parseFunc("COALESCE((SELECT MAX(t.v) FROM t), 0)");
 
-        assertEquals("coalesce", f.name().toLowerCase());
+        assertEquals("coalesce", String.join(".", f.name().values()).toLowerCase());
         assertEquals(2, f.args().size());
 
-        var a0 = f.args().get(0);
+        var a0 = f.args().getFirst();
         assertInstanceOf(FunctionExpr.Arg.ExprArg.class, a0);
         var expr = ((FunctionExpr.Arg.ExprArg) a0).expr();
         assertInstanceOf(QueryExpr.class, expr);
@@ -79,8 +79,18 @@ class FunctionExprParserTest {
     @Test
     void parses_count_star() {
         var f = parseFunc("COUNT(*)");
-        assertEquals("count", f.name().toLowerCase());
+        assertEquals("count", String.join(".", f.name().values()).toLowerCase());
         assertEquals(1, f.args().size());
-        assertInstanceOf(FunctionExpr.Arg.StarArg.class, f.args().get(0));
+        assertInstanceOf(FunctionExpr.Arg.StarArg.class, f.args().getFirst());
+    }
+
+    @Test
+    void preserves_quote_metadata_in_qualified_function_name() {
+        var f = parseFunc("\"Pg\".\"Lower\"(name)");
+
+        assertEquals("Pg.Lower", String.join(".", f.name().values()));
+        assertEquals(2, f.name().parts().size());
+        assertEquals(QuoteStyle.DOUBLE_QUOTE, f.name().parts().get(0).quoteStyle());
+        assertEquals(QuoteStyle.DOUBLE_QUOTE, f.name().parts().get(1).quoteStyle());
     }
 }
